[package]
name = "rudp2p"
description = "Library to exchange P2P messages with UDP protocol"
version = "0.3.0"
authors = ["Grégory Tardivel"]
repository = "https://github.com/gr3gdev/rudp2p"
edition = "2021"
license-file = "LICENSE"
keywords = ["P2P", "UDP"]
categories = ["network-programming", "web-programming"]
exclude = ["/features", "/.github", "/target"]

[lib]
name = "rudp2plib"
path = "src/lib.rs"
doc = true

[[test]]
name = "peer"
harness = false

[dependencies]
async-trait = "0.1"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
openssl = "0.10"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = "0.29"

[dev-dependencies]
openssl-sys = "0.9"
cucumber = "0.19"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
